WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187189
Regression(
r233359
): Caused ITP tests to be flaky
https://bugs.webkit.org/show_bug.cgi?id=187189
Summary
Regression(r233359): Caused ITP tests to be flaky
Chris Dumez
Reported
2018-06-29 12:14:10 PDT
r233359
caused ITP tests to be flaky.
Attachments
Patch
(3.18 KB, patch)
2018-06-29 12:23 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.20 KB, patch)
2018-06-29 12:27 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-06-29 12:23:24 PDT
Created
attachment 343929
[details]
Patch
Chris Dumez
Comment 2
2018-06-29 12:27:24 PDT
Created
attachment 343930
[details]
Patch
youenn fablet
Comment 3
2018-06-29 13:19:31 PDT
Comment on
attachment 343930
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=343930&action=review
> Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:1481 > + resolveDirectoriesIfNecessary();
That seems a bit odd to call it there but I guess this is fine since this is a method called only by our test infrastructure.
WebKit Commit Bot
Comment 4
2018-06-29 14:00:56 PDT
Comment on
attachment 343930
[details]
Patch Clearing flags on attachment: 343930 Committed
r233371
: <
https://trac.webkit.org/changeset/233371
>
WebKit Commit Bot
Comment 5
2018-06-29 14:00:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-06-29 14:01:32 PDT
<
rdar://problem/41651469
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug